# xml-schema-validator

./: .gitignore  Makefile.in  README.md  build.gradle  build.gradle.m4  configure  configure-helper.bash  configure.ac  settings.gradle.m4
src/main/java/org/gtri/niem/xml_schema_validator/: CLI.java  EntityResolver.java  GrammarPool.java  Logger.java  NOPEntityResolver.java  Parser.java  XMLCatalogParser.java  XMLHandler.java  XercesParser.java
src/test/resources/simple/: run-tests
src/test/resources/simple/test01-example/: catalog.xml  example.xml
src/test/resources/simple/test03-multi-catalog/: catalog.xml  catalog2.xml
src/test/resources/ssgt/: run-tests
src/test/resources/ssgt/test01-base-test/base-xsd/niem/niem-core/4.0/: niem-core.xsd
src/test/resources/ssgt/test01-base-test/iep-sample/: Person-with-xsi-schemalocation.xml
src/test/resources/ssgt/test02-no-catalog/iep-sample/: Person.xml
src/test/resources/ssgt/test03-extension/: mpd-catalog.xml
src/test/resources/ssgt/test03-extension/base-xsd/: xml-catalog.xml
src/test/resources/ssgt/test03-extension/base-xsd/extension/: TemplateExtension.xsd
src/test/resources/ssgt/test03-extension/base-xsd/niem/: wantlist.xml
src/test/resources/ssgt/test03-extension/base-xsd/niem/niem-core/4.0/: niem-core.xsd
src/test/resources/ssgt/test03-extension/base-xsd/niem/proxy/xsd/4.0/: xs.xsd
src/test/resources/ssgt/test03-extension/iep-sample/: exchange-sample.xml
src/test/resources/ssgt/test04-message-spec/: manifest.xml
src/test/resources/ssgt/test04-message-spec/base-xsd/: xml-catalog.xml
src/test/resources/ssgt/test04-message-spec/base-xsd/extension/: VehicleReport-extension.xsd
src/test/resources/ssgt/test04-message-spec/base-xsd/niem/: wantlist.xml
src/test/resources/ssgt/test04-message-spec/base-xsd/niem/niem-core/4.0/: niem-core.xsd
src/test/resources/ssgt/test04-message-spec/message-sample/: VehicleReport.xml
src/test/resources/ssgt/test05-schema-location/base-xsd/niem/: wantlist.xml
src/test/resources/ssgt/test05-schema-location/iep-sample/: Person.xml
